# ai-crypto-quant-research

./: .gitignore  CHANGELOG.md  CODEX_UPGRADE_REPORT.md  DECISIONS.md  PROJECT_STATE.md  README.md  TASK_LOG.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample_data.csv
docs/: architecture.md  backtest_assumptions.md  baseline_audit.md  interview_talking_points.md  portfolio_walkthrough.md  resume_project_description.md
examples/: usage_example.md
plans/: portfolio_upgrade_plan.md
results/: backtest_result_sample.csv  backtest_summary_sample.json  equity_curve_sample.csv  signals_sample.csv  trades_sample.csv
scripts/: generate_sample_data.py
src/crypto_quant_research/: __init__.py  __main__.py  backtest.py  cli.py  data_loader.py  exceptions.py  reporting.py  sample_data.py  strategy.py  visualization.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_data_loader.py  test_reporting.py  test_sample_data_generator.py  test_strategy.py  test_visualization.py
